# Budgt.sh

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
HomebrewFormula/: budgt-sh.rb
budgt/: __init__.py  app.py  database.py  styles.tcss  tui.py
budgt/components/: __init__.py  calendar.py  categories.py  insights.py  modals.py  spending_chart.py  styles.py  top_categories.py  weekly_overview.py
